service-apis/sample-externalip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-externalip
spec:
  type: ClusterIP
  externalIPs:
  - 192.168.65.4
  ports:
  - name: "http-port"
    port: 8080
    protocol: "TCP"
    targetPort: 80
  selector:
    app: sample-app
