service-apis/sample-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-external-name
  namespace: default
spec:
  type: ExternalName
  externalName: external.example.com
