service-apis/sample-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: sample.example.com
    http:
      paths:
      - path: /path1/*
        backend:
          serviceName: sample-ingress-svc-1
          servicePort: 8888
      - path: /path2/*
        backend:
          serviceName: sample-ingress-svc-2
          servicePort: 8888
  backend:
    serviceName: sample-ingress-default
    servicePort: 8888
  tls:
  - hosts:
    - sample.example.com
    secretName: tls-sample
